<resources>
    <string name="app_name">Base</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="text_onboard">Let\'s get you on board quickly</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_signup">OnBoard</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>


    <string name="error_format_invalid">Format is invalid</string>
    <string name="error_too_short">Too short</string>
    <string name="text_forgot_password">Forgot Password</string>
</resources>
