<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.darkknight.base.ui.main.MainViewModel" />
    </data>

    <com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:context=".ui.main.MainActivity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                style="@style/ButtonStyle1"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:text="@string/text_login"
                app:layout_constraintBottom_toTopOf="@id/button_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                style="@style/ButtonStyle2"
                android:onClick="@{() -> viewModel.onRegisterClick()}"
                android:text="@string/text_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/layout_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom_sheet"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal"
            app:behavior_hideable="false"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_welcome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_welcome"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_onboard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_onboard"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_normal"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_name"
                        style="@style/EditTextStyle"
                        android:autofillHints="@string/hint_name"
                        android:hint="@string/hint_name"
                        app:endIconDrawable="@drawable/ic_person"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_onboard">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_email"
                        style="@style/EditTextStyle"
                        android:autofillHints="@string/hint_email_address"
                        android:hint="@string/hint_email_address"
                        app:endIconDrawable="@drawable/ic_email"
                        app:endIconMode="custom"
                        app:errorText="@{viewModel.login.emailError}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ti_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.login.field.email}"
                            app:onFocus="@{viewModel.getEmailOnFocusChangeListener()}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_password"
                        style="@style/EditTextStyle"
                        android:autofillHints="@string/hint_password"
                        android:hint="@string/hint_password"
                        app:endIconMode="password_toggle"
                        app:errorText="@{viewModel.login.passwordError}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ti_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={viewModel.login.field.password}"
                            app:onFocus="@{viewModel.getPasswordOnFocusChangeListener()}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_phone"
                        style="@style/EditTextStyle"
                        android:autofillHints="@string/hint_phone"
                        android:hint="@string/hint_phone"
                        app:endIconDrawable="@drawable/ic_phone"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ti_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_onboard"
                        style="@style/ButtonStyle2"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:onClick="@{() -> viewModel.onBoard()}"
                        android:text="@{viewModel.isRegisterFlow ? @string/text_signup : @string/text_login}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ti_phone" />


                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/group_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isRegisterFlow ? View.VISIBLE : View.GONE}"
                        app:constraint_referenced_ids="ti_name,ti_phone,tv_onboard" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_forget_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:gravity="center"
                        android:text="@string/text_forgot_password"
                        android:textColor="@color/colorBottom"
                        android:textSize="@dimen/text_normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_onboard" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>


    </com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>

</layout>
